--- a/views/style.css
+++ b/views/style.css
@@ -203,56 +203,64 @@
   font-weight: 600;
 }
 
-.header-container {
-  display: flex;
+/*header*/
+.main-header{
   width: 100%;
-  height: 220px;
-  align-items: center;
-  align-self: center;
-  justify-content: flex-start;
-  flex-direction: row;
-  position: absolute;
-  top: 12%; /* Centers vertically */
-  left: 50%;
-  transform: translate(-50%, -50%); /* Adjusts to be exactly centered */
-  color: white; /* Adjust text color as needed */
-  background-color: rgba(0, 0, 0, 0.5); /* Adds a semi-transparent background */
-  border-radius: 5px; /* Optional: rounded corners */
-}
-
-.header-logo {
+  height: 250px;
   display: flex;
-  width: 315px;
-  height: 50px;
-  align-items: center;
-  justify-content: flex-start;
-  background-color: var(--blue-700);
-  margin-left: 250px;
-}
-
-.header-navigation {
-  display: flex;
-  width: 550px;
-  height: 100px;
-  align-items: center;
-  border-width: 2px;
   justify-content: center;
-  background-color: var(--blue-500);
+  align-items: center;
+  position: absolute;
+  top: 0;
+  background-color: transparent;
+}
+
+.header-logo-container{
+  margin-left: 10%;
+}
+.header-logo-container span{
+  color: var(--white)
+}
+.main-nav-bar{
+  width: 100%;
+  background-color: transparent;
+}
+
+.navbar-nav{
   margin-left: auto;
+  background-color: var(--black);
+  display: flex;
+  align-items: center;
+  height: 75px;
+  min-width: 50%;
+  padding: 10px;
 }
-
-.navigation {
-  list-style-type: none; /* Removes bullet points */
-  padding: 0;
-  margin: 0;
-  display: flex; /* Makes items display in a row */
+@media(max-width: 983px){
+  .navbar-nav{
+    height: auto;
+  }
+  .container-fluid{
+    margin-top: 14%;
+  }
 }
-
-.navigation li {
-  margin-right: 20px; /* Adds space between items */
+.main-ul-nav li a{
+  color: var(--white)
 }
-
+.main-nav-toggler{
+  background-color: var(--white) !important;
+}
+/*dashboard*/
 .dashboard-body{
   height: 100vh;
   width: 100%;
+}
+
+.sections{
+  width: 100%;
+  height: 100lvh;
+}
+
+#firstSection img {
+  width: 100%;
+  height: 100%;
 }
