--- a/views/style.css
+++ b/views/style.css
@@ -45,14 +45,14 @@
 .login-body {
   width: 100%;
   height: 100vh;
-  background: url(../images/login-background.png);
+  background: url(../images/hero-bg.png);
   padding: 50px;
 }
 
 .login-logo-container {
   display: flex;
   margin: 60px auto;
-  width: 20%;
+  width: 50%;
   height: 10%;
   justify-content: center;
   align-items: center;
@@ -64,7 +64,7 @@
 }
 
 .login-form {
-  width: 480px;
+  max-width: 480px !important;
   height: 60%;
   margin: auto;
   background-color: var(--white);
@@ -139,7 +139,7 @@
   height: 30px;
 }
 .login-button {
-  height: 65px;
+  padding: 10px;
   background-color: var(--blue-500);
   border: 0;
   border-radius: 4px;
@@ -214,13 +214,45 @@
   background-color: rgba(0,0,0, 0.5);
 
 }
+.navbar-toggler{
+  background-color: var(--white) !important;
+  
+}
+.search-span{
+  color: var(--white);
+  letter-spacing: 5px;
+}
+@media (max-width: 990px){
+  #navbarContent{
+    position: absolute;
+    right: 0;
+    top: 100px;
+    background-color: var(--black);
+    z-index: 10;
+    padding: 20px 0 20px 0;
+    border-radius: 10px;
+}
+  .navbar-nav{
+    align-items: center;
+  }
+  .right-side-nav{
+    flex-direction: column;
+  }
+  .white-vertical-lines{
+    display: none;
+  }
+}
+@media (min-width: 991px){
+  .search-span{
+    display: none;
+  }
+}
 /* Dropdown fade-in and slide-down animation */
 .dropdown-menu {
   display: none;
   opacity: 0;
   transform: translateY(-50px);
   transition: opacity 0.3s ease, transform 0.3s ease;
- 
 }
 
 /* Show dropdown menu */
@@ -228,6 +260,8 @@
   display: block;
   opacity: 1;
   transform: translateY(0);
+
+ 
 }
 .color-white{
   color: var(--white) !important;
@@ -333,12 +367,48 @@
 
 /*services*/
 .services-container{
-  position: absolute;
   background-color: var(--white);
-  bottom: -50px;
-  left: 7%;
-  box-shadow: 3px 3px 3px var(--black);
+  box-shadow: 3px 3px 10px var(--black);
+  border-radius: 10px;
+  position: relative;
+  width: 100%;
+  margin-top: 4%;
+
+}
+.services-row{
+  padding: 75px;
+  height: auto;
+  width: 100% !important;
 }
 .services{
-  height: 200px;
+  height: 100% !important;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 25% !important;
+  text-align: center;
+  gap: 20px;
+  min-width: 250px;
+}
+.services div{
+  display: flex;
+  align-items: center;
+  height: 100px;
+}
+.services-h4{
+  font-size: 20px;
+}
+@media (max-width: 990px){
+  .services-container{
+   margin-top: 20%;
+  }
+  .hero-container{
+    display: none;
+  }
+
+}
+
+#secondSection{
+  background-image: url(../images/2ndSection.png);
+  z-index: -11;
 }
