--- a/views/style.css
+++ b/views/style.css
@@ -209,10 +209,10 @@
   height: 100px;
   display: flex;
   align-items: center;
-  position: absolute;
+  position: fixed;
   top: 0;
   background-color: rgba(0,0,0, 0.5);
-
+  z-index: 99;
 }
 .navbar-toggler{
   background-color: var(--white) !important;
@@ -333,15 +333,37 @@
   width: 100%;
   height: 100lvh;
 }
-#firstSection{
+#firstSection {
+  position: relative;
   padding: 20px;
   background-image: url(../images/hero-bg.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
+
+#firstSection::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 70%; /* Adjust width to control how far the dark area extends */
+  height: 100%;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
+  z-index: 1;
+}
+
+#firstSection * {
+  position: relative; /* Ensures content appears above the overlay */
+  z-index: 2;
+}
+
+
 
 .hero-container{
  width: 43% !important;
- margin-top: 14% !important;
- margin-left: 10% !important;
+ margin-top: 15% !important;
+ margin-left: 5% !important;
  display: flex;
  flex-direction: column;
  gap: 20px;
@@ -372,13 +394,14 @@
   border-radius: 10px;
   position: relative;
   width: 100%;
-  margin-top: 4%;
-
+  margin: 9% 0 0 0;
+  max-width: 90% !important;
 }
 .services-row{
   padding: 75px;
   height: auto;
   width: 100% !important;
+  margin: 0 !important;
 }
 .services{
   height: 100% !important;
@@ -409,6 +432,6 @@
 }
 
 #secondSection{
-  background-image: url(../images/2ndSection.png);
+ 
   z-index: -11;
 }
