--- a/views/style.css
+++ b/views/style.css
@@ -42,113 +42,6 @@
   font-family: "Roboto", serif;
 }
 
-.login-body {
-  width: 100%;
-  height: 100vh;
-  background: url(../images/hero-bg.png);
-  padding: 50px;
-}
-
-.login-logo-container {
-  display: flex;
-  margin: 60px auto;
-  width: 50%;
-  height: 10%;
-  justify-content: center;
-  align-items: center;
-  color: var(--white);
-  font-family: "Poly", serif;
-  font-weight: 400;
-  font-style: italic;
-  font-size: 32px;
-}
-
-.login-form {
-  max-width: 480px !important;
-  height: 60%;
-  margin: auto;
-  background-color: var(--white);
-  padding: 45px;
-  display: flex;
-  flex-direction: column;
-  border-radius: 6px;
-}
-
-.login-form label {
-  font-weight: 700;
-  height: 40px;
-}
-.login-form p {
-  text-align: center;
-  margin-top: 20px;
-}
-.login-form p a {
-  font-size: 20px;
-  text-decoration: none;
-  color: var(--blue-500);
-}
-.sign-in-label {
-  text-align: center;
-  font-size: 26px;
-  font-weight: 600;
-  margin-bottom: 40px;
-}
-
-.login-input-username {
-  height: 50px;
-  background-color: var(--grey-100);
-  border: 0;
-  border-radius: 4px;
-  padding: 10px;
-}
-.login-input-username::placeholder {
-  color: var(--grey-400);
-}
-.password-container {
-  height: 48px;
-  display: flex;
-  position: relative;
-  align-items: center;
-  margin-bottom: 40px;
-}
-.login-label-password {
-  margin-top: 35px;
-  font-size: 20px;
-}
-.login-label {
-  font-size: 20px;
-}
-.password-container input {
-  border-radius: 4px;
-  height: 100%;
-  width: 100%;
-  border: 0;
-  background-color: var(--grey-100);
-  padding: 10px;
-}
-.password-container input::placeholder {
-  color: var(--grey-400);
-}
-.eye-icon {
-  position: absolute;
-  right: 10px;
-  top: 50%;
-  transform: translateY(-50%);
-  cursor: pointer;
-  width: 30px;
-  height: 30px;
-}
-.login-button {
-  padding: 10px;
-  background-color: var(--blue-500);
-  border: 0;
-  border-radius: 4px;
-  font-size: 20px;
-  color: var(--blue-50);
-}
-.login-button:hover {
-  cursor: pointer;
-}
 
 .footer {
   width: 100%;
@@ -297,7 +190,6 @@
   color: white;
   text-decoration: none;
   display: inline-block;
-  text-transform: uppercase;
   letter-spacing: 1px;
   border: 2px solid white;
   border-radius: 1000px;
@@ -364,6 +256,7 @@
  width: 43% !important;
  margin-top: 15% !important;
  margin-left: 5% !important;
+ min-width: 500px;
  display: flex;
  flex-direction: column;
  gap: 20px;
@@ -376,6 +269,7 @@
 .hero-paragraph{
   color: var(--white);
   font-size: 25px;
+  
 }
 .hero-btn{
   width: 210px;
@@ -392,10 +286,11 @@
   background-color: var(--white);
   box-shadow: 3px 3px 10px var(--black);
   border-radius: 10px;
-  position: relative;
+  top: -20%;
   width: 100%;
-  margin: 9% 0 0 0;
   max-width: 90% !important;
+  z-index: 10;
+  position: relative;
 }
 .services-row{
   padding: 75px;
@@ -423,15 +318,100 @@
 }
 @media (max-width: 990px){
   .services-container{
-   margin-top: 20%;
+    top: 0;
+    margin: 0;
+    max-width: 100% !important;
   }
   .hero-container{
-    display: none;
+   width: 70% !important;
   }
 
 }
-
+.services-toggle-btn{
+  width: 100%;
+  color: var(--blue-500) !important;
+}
 #secondSection{
- 
-  z-index: -11;
+}
+/*vision-mission*/
+.vision-mission-main-container{
+  display: flex;
+}
+.vision-mission-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.vision-mission-h4{
+  color: var(--blue-500);
+  font-size: 22px;
+}
+.vision-mission-h1{
+  font-size: 32px;
+}
+.vision-mission-paragraph{
+  font-size: 24px;
+  max-width: 80%;
+}
+.vision-mission-btn{
+  width: 210px;
+  height: 55px;
+  background-color: var(--blue-500) !important;
+  color: var(--blue-50) !important;
+}
+@media (max-width: 990px){
+  .vision-mission-img-container img{
+    display: none;
+  }
+  .vision-mission-container{
+    max-width: 100% !important;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+}
+.landing-frames-container{
+  margin-top: 5%;
+  max-width: 90% !important;
+}
+
+.landing-frames-img-container{
+  padding: 0 !important;
+}
+.landing-frames-img-container img{
+  height: 100%;
+}
+.landing-frames-right-side-container{
+  padding: 5% 2% 5% 5% !important;
+  background-color: var(--grey-900);
+  margin: 0 !important;
+}
+.landing-frames-h1{
+  color: var(--white);
+  font-size: 32px;
+}
+.landing-frames-paragraph{
+  color: var(--white);
+  font-size: 20px;
+  max-width: 90%;
+  margin-top: 5%;
+}
+.landing-frames-btn{
+  margin-top: 5%;
+  width: 150px;
+  height: 55px;
+  background-color: var(--blue-500) !important;
+  color: var(--blue-50) !important;
+}
+
+@media (max-width: 990px){
+  .landing-frames-img-container{
+    display: none;
+  }
+  .landing-frames-right-side-container{
+    text-align: center;
+  }
+  #secondSection{
+    padding-top: 5%;
+  }
 }
