add componenets system, header fixes

--- a/views/components/howItWorks.html
+++ b/views/components/howItWorks.html
@@ -4,34 +4,34 @@
     </button>
     <!-- Collapsible Content -->
     <div class="collapse d-md-block" id="howItWorksDropdown">
-        <h1 class="how-it-works-h1">How It Works</h1>
-        <div class="row footer-row">
-            <div class="col how-it-works-step">
+        <h1 class="how-it-works-h1 wow animate__fadeInDown animate__animated " data-wow-delay="0.1s">How It Works</h1>
+        <div class="row how-it-works-row">
+            <div class="col how-it-works-step wow animate__fadeInUp animate__animated " data-wow-delay="0.1s">
                 <h1 class="how-it-works-numbers">1</h1>
                 <h4 class="how-it-works-h4">Schedule Your Visit</h4>
                 <p class="how-it-works-paragraph">Schedule a convenient time online or by phone.</p>
             </div>
-            <div class="col how-it-works-step">
+            <div class="col how-it-works-step wow animate__fadeInUp animate__animated " data-wow-delay="0.4s">
                 <h1 class="how-it-works-numbers">2</h1>
                 <h4 class="how-it-works-h4">Comprehensive Eye Exam</h4>
                 <p class="how-it-works-paragraph">Our optometrists will assess your vision and eye health.</p>
             </div>
-            <div class="col how-it-works-step">
+            <div class="col how-it-works-step wow animate__fadeInUp animate__animated " data-wow-delay="0.7s">
                 <h1 class="how-it-works-numbers">3</h1>
                 <h4 class="how-it-works-h4">Frame Selection and Fitting</h4>
                 <p class="how-it-works-paragraph">Explore our wide range of stylish frames.</p>
             </div>
-            <div class="col how-it-works-step">
+            <div class="col how-it-works-step wow animate__fadeInUp animate__animated " data-wow-delay="1s">
                 <h1 class="how-it-works-numbers">4</h1>
                 <h4 class="how-it-works-h4">Pick Your Lenses</h4>
                 <p class="how-it-works-paragraph">Select the best lenses for your needs.</p>
             </div>
-            <div class="col how-it-works-step">
+            <div class="col how-it-works-step wow animate__fadeInUp animate__animated " data-wow-delay="1.3s">
                 <h1 class="how-it-works-numbers">5</h1>
                 <h4 class="how-it-works-h4">Enjoy Clear Vision</h4>
                 <p class="how-it-works-paragraph">Receive your new glasses or contact lenses.</p>
             </div>
         </div>
-        <a class="how-it-works-btn mt-3" href="#">Book An Appointment</a>
+        <a class="how-it-works-btn mt-3 wow animate__fadeInUp animate__animated " data-wow-delay="0.1s" href="#">Book An Appointment</a>
     </div>
 </div>
