--- a/views/components/landingTestimonials.html
+++ b/views/components/landingTestimonials.html
@@ -1,8 +1,8 @@
 <div class=" landing-testimonial-container">
-    <h4 class="landing-testimonial-h4">SEE WHAT OUR CLIENTS HAVE TO SAY</h4>
-    <h1 class="landing-testimonial-h1">Testimonials</h1>
+    <h4 class="landing-testimonial-h4 wow animate__fadeInDown animate__animated " data-wow-delay="0.1s">SEE WHAT OUR CLIENTS HAVE TO SAY</h4>
+    <h1 class="landing-testimonial-h1 wow animate__fadeInDown animate__animated " data-wow-delay="0.1s">Testimonials</h1>
     <div class="row landing-testimonial-row">
-        <div class="col-12 col-md-4 landing-testimonial-col testimonial-card">
+        <div class="col-12 col-md-4 landing-testimonial-col testimonial-card wow animate__fadeIn animate__animated " data-wow-delay="0.5s">
                 <img src="../images/apostrophe.png" />
                 <p class="testimonial-card-paragraph">I’ve never felt more comfortable at a dental office! The entire staff is so welcoming,
                     and Dr. [Dentist’s Name] takes the time to explain everything. 
@@ -13,7 +13,7 @@
                     <p>Sarah L.</p>
                 </div>
         </div>
-        <div class="col-12 col-md-4 landing-testimonial-col testimonial-card blue-card">
+        <div class="col-12 col-md-4 landing-testimonial-col testimonial-card blue-card wow animate__fadeIn animate__animated " data-wow-delay="0.5s">
                 <img src="../images/apostrophe.png" />
                 <p class="testimonial-card-paragraph">I’ve always been nervous about visiting the dentist, 
                     but Dr. [Dentist’s Name] made me feel at ease from the moment I walked in. 
@@ -24,7 +24,7 @@
                     <p class="blue-card-p">David M.</p>
                 </div>
         </div>
-        <div class="col-12 col-md-4 landing-testimonial-col testimonial-card">
+        <div class="col-12 col-md-4 landing-testimonial-col testimonial-card wow animate__fadeIn animate__animated " data-wow-delay="0.5s">
                 <img src="../images/apostrophe.png" />
                 <p class="testimonial-card-paragraph">My kids used to hate going to the dentist until we found [Clinic Name]. 
                     Dr. [Dentist’s Name] is so patient and gentle with them, and they actually look forward to their appointments now.
@@ -35,5 +35,5 @@
                 </div>
         </div>
     </div>
-    <a href="#" class="landing-testimonial-btn">See More</a>
+    <a href="#" class="landing-testimonial-btn wow animate__fadeInUp animate__animated " data-wow-delay="0.1s">See More</a>
 </div>
