--- a/views/components/ourDoctors.html
+++ b/views/components/ourDoctors.html
@@ -1,5 +1,5 @@
 <div class="container vision-mission-main-container our-doctors-container">
-        <div class="vision-mission-container">
+        <div class="vision-mission-container wow animate__fadeInLeft animate__animated " data-wow-delay="0.1s">
             <h4 class="vision-mission-h4">Our Doctors</h4>
             <h1 class="vision-mission-h1">Vision Care Professionals</h1>
             <p class="vision-mission-paragraph">Our experienced ophthalmologists are dedicated to providing comprehensive eye care services.
@@ -7,7 +7,7 @@
                  we're committed to ensuring optimal eye health for patients of all ages.</p>
             <a class="vision-mission-btn" href="#">Learn More About Us</a>
         </div>
-        <div class="vision-mission-img-container">
+        <div class="vision-mission-img-container wow animate__fadeInRight animate__animated " data-wow-delay="0.1s">
             <img src="../images/our-doctors.png"/>
         </div>
     </div>
