--- a/views/components/visionAndMission.html
+++ b/views/components/visionAndMission.html
@@ -1,12 +1,12 @@
 <div class="container vision-mission-main-container">
-    <div class="vision-mission-container animate__fadeInLeft animate__animated ">
+    <div class="vision-mission-container wow animate__fadeInLeft animate__animated " data-wow-delay="0.1s">
         <h4 class="vision-mission-h4">ABOUT US</h4>
         <h1 class="vision-mission-h1">Vision and Mission</h1>
         <p class="vision-mission-paragraph">To empower individuals to see the world clearly and confidently, 
             providing exceptional eye care services and stylish eyewear solutions.</p>
         <a class="vision-mission-btn">Learn More About Us</a>
     </div>
-    <div class="vision-mission-img-container">
+    <div class="vision-mission-img-container wow animate__fadeInRight animate__animated " data-wow-delay="0.1s">
         <img src="../images/vision-mission-img.png"/>
     </div>
 </div>
