--- a/views/components/footer.html
+++ b/views/components/footer.html
@@ -4,8 +4,9 @@
             <!-- Logo Section -->
             <div class="col-12 col-md-3 text-center text-md-start mb-4 mb-md-0 footer-col">
                 <div class="footer-logo">
-                    <img src="../images/logo.png" alt="Dental Clinic Logo" class="img-fluid" />
+                    <img src="../images/logo.png" alt="Dental Clinic Logo" class="container-fluid" />
                 </div>
+                <h2 class="text-center">WILERICH OPT. CLINIC</h1>
             </div>
 
             <!-- Contact Information -->
