login-registration form design

--- a/views/components/hero.html
+++ b/views/components/hero.html
@@ -4,5 +4,5 @@
                     From everyday glasses to specialized lenses, we tailor solutions to your unique needs. Visit us today 
                     for a comprehensive eye exam and discover the difference.
                 </p>
-                <a class="hero-btn animate__fadeInLeft animate__animated" href="#">Learn more</a>
+                <a class="hero-btn animate__fadeInLeft animate__animated" href="#secondSection">Learn more</a>
 </div>
