--- a/views/components/landingFrames.html
+++ b/views/components/landingFrames.html
@@ -7,7 +7,7 @@
             <h1 class="landing-frames-h1">Explore a wide variety of frames</h1>
             <p class="landing-frames-paragraph">Explore a vast array of frames, from sleek and modern to classic and timeless.
                 Discover the perfect frame to elevate your artwork or cherished memories.</p>
-            <a class="landing-frames-btn m-auto" href="#">Learn More</a>
+            <a class="landing-frames-btn" href="#">Learn More</a>
         </div>
     </div>
 </div>
