--- a/views/components/header.html
+++ b/views/components/header.html
@@ -5,7 +5,7 @@
         <img src="../images/logo.png" alt="Dental Clinic Logo" height="50">
         <span class="ms-2 fw-bold logo-span">WILERICH OPT. CLINIC</span>
       </a>
-      <button class="navbar-toggler button button-pulse" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler button" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarContent">
