--- a/views/components/visionAndMission.html
+++ b/views/components/visionAndMission.html
@@ -4,7 +4,7 @@
         <h1 class="vision-mission-h1">Vision and Mission</h1>
         <p class="vision-mission-paragraph">To empower individuals to see the world clearly and confidently, 
             providing exceptional eye care services and stylish eyewear solutions.</p>
-        <a class="vision-mission-btn">Learn More About Us</a>
+        <a class="vision-mission-btn" href="aboutUs.php">Learn More About Us</a>
     </div>
     <div class="vision-mission-img-container wow animate__fadeInRight animate__animated " data-wow-delay="0.1s">
         <img src="../images/vision-mission-img.png"/>
