header links fixed, SESSIONS ADDED = FIRSTNAME AND SHOWMODAL

--- a/views/components/howItWorks.html
+++ b/views/components/howItWorks.html
@@ -32,6 +32,6 @@
                 <p class="how-it-works-paragraph">Receive your new glasses or contact lenses.</p>
             </div>
         </div>
-        <a class="how-it-works-btn mt-3 wow animate__fadeInUp animate__animated " data-wow-delay="0.1s" href="#">Book An Appointment</a>
+        <a class="how-it-works-btn mt-3 wow animate__fadeInUp animate__animated btn" data-wow-delay="0.1s" href="bookAppointment.php">Book An Appointment</a>
     </div>
 </div>
