--- a/views/components/landingTestimonials.html
+++ b/views/components/landingTestimonials.html
@@ -35,5 +35,5 @@
                 </div>
         </div>
     </div>
-    <a href="#" class="landing-testimonial-btn wow animate__fadeInUp animate__animated " data-wow-delay="0.1s">See More</a>
+    <a href="testimonials.php" class="landing-testimonial-btn wow animate__fadeInUp animate__animated " data-wow-delay="0.1s">See More</a>
 </div>
