--- a/views/components/ourDoctors.html
+++ b/views/components/ourDoctors.html
@@ -5,7 +5,7 @@
             <p class="vision-mission-paragraph">Our experienced ophthalmologists are dedicated to providing comprehensive eye care services.
                  From routine eye exams to complex surgical procedures, 
                  we're committed to ensuring optimal eye health for patients of all ages.</p>
-            <a class="vision-mission-btn" href="#">Learn More About Us</a>
+            <a class="vision-mission-btn" href="aboutUs.php">Learn More About Us</a>
         </div>
         <div class="vision-mission-img-container wow animate__fadeInRight animate__animated " data-wow-delay="0.1s">
             <img src="../images/our-doctors.png"/>
