--- a/views/style.css
+++ b/views/style.css
@@ -420,7 +420,7 @@ a:hover .icon{
 /*services*/
 .services-container{
   background-color: var(--white);
-  box-shadow: 3px 3px 10px var(--black);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   top: -200px;
   width: 100%;
@@ -659,7 +659,7 @@ a:hover .icon{
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-shadow: 2px 2px 4px var(--black);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   height: 300px; 
   width: 3px;
   min-width: 500px !important;
@@ -732,7 +732,7 @@ margin: -2%;
   width: 40% !important;
   padding: 3% 5% 3% 5% !important;
   border-radius: 10px;
-  box-shadow: 2px 2px 5px var(--black);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 @media (max-width: 991px){
   .login-container, .registration-container{
@@ -825,7 +825,6 @@ margin: -2%;
 }
 
 #bookAppointmentSection{
-  padding-top: 20%;
 }
 
 #calendar {
@@ -840,12 +839,13 @@ margin: -2%;
 
 #myBookSection{
   height: auto;
-
+  min-height: 100vh;
+  padding-bottom: 10%;
 }
 .my-table-container{
   margin: 0 auto;
-  width: 50%;
-  margin-top: 10% !important;
+  width: 60% !important; 
+  min-width: 70% !important;
 }
 
 .view-appointment-main-container{
@@ -915,7 +915,7 @@ margin: -2%;
   max-width: 20% !important;
   width: 30% !important;
   border-radius: 25px;
-  box-shadow: 2px 2px 4px var(--black);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   padding: 1% 30px 1% 30px;
 }
 .verify-otp-form{
@@ -951,10 +951,7 @@ margin: -2%;
   box-shadow: 4px 0px 10px rgba(0,0,0,0.1); /* Optional: shadow effect */
 }
 
-.view-appointment-main-container {
-  margin-left: 250px; /* Adjust this based on the width of your sidebar */
-  padding-left: 20px;
-}
+
 /*test*/
 .list-group-item.active {
   background-color: var(--blue-500) !important;
@@ -962,4 +959,167 @@ margin: -2%;
 }
 .list-group-item {
   cursor: pointer;
+}
+
+th{
+  background-color: var(--blue-50) !important;
+}
+
+.pending {
+  color: var(--black) !important;
+  font-weight: bold;
+  background-color: rgba(180, 117, 0, 0.05) !important;
+  text-align: center;
+  
+}
+.consulted {
+  background-color: rgba(15, 54, 160, 0.05) !important;
+  font-weight: bold;
+  text-align: center;
+}
+.accepted {
+  background-color: rgba(0, 255, 98, 0.05) !important;
+  font-weight: bold;
+  text-align: center;
+}
+.rejected {
+  background-color: rgba(247, 0, 0, 0.05) !important;
+  font-weight: bold;
+  text-align: center;
+}
+
+thead{
+  height: 75px !important;
+}
+
+@media (max-width:990px){
+  
+}
+
+
+/* HEADER -------------------*/
+.aboutUs-header {
+  height: 120px;
+  width: 100%;
+  background-color: var(--blue-50);
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.aboutUs-page-title {
+  margin-left: 6%;
+  margin-bottom: 0px;
+  
+}
+
+.aboutUs-page-path{
+  margin-left: 6%;
+  font-weight: 400;
+}
+.aboutUs-page-path a{
+  color: var(--black);
+  text-decoration: none;
+  font-weight: 400;
+}
+.aboutUs-page-path span{
+  font-weight: 400;
+}
+
+.aboutUs-page-title {
+  font-size: 28px;
+ color: var(--blue-500);
+ font-weight: 500;
+ letter-spacing: 0.05em;
+}
+
+.admin-tab.active{
+  color: var(--blue-500) !important;
+}
+.admin-tab{
+  color: var(--black) !important;
+}
+
+.dt-search{
+  display: flex;
+  width: 500px;
+  align-items: center;
+}
+.dt-search input{
+  width: 400px;
+  padding-left: 10% !important;
+}
+.dt-search label{
+  margin-left: auto;
+  font-weight: 500;
+  margin-right: 10px;
+  position: relative;
+  right: -10%;
+}
+#testimonialSection{
+  height: auto;
+  padding-bottom: 5%;
+  min-height: 100vh;
+}
+
+#createTestimonialSection{
+  height: auto;
+  padding-bottom: 5%;
+  min-height: 100vh;
+}
+
+.testimonial-card-v2{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  height: 300px; 
+  width: 300px;
+  min-width: 500px !important;
+  max-width: 500px !important;
+  padding-top: 3.5% !important;
+  padding-left: 4% !important;
+  border-radius: 6px;
+  border: 0;
+  background-color: var(--blue-50);;
+  margin: 1% auto 10% auto;
+}
+.testimonial-card-paragraph-v2{
+  font-size: 0.8rem;
+  max-width: 90%;
+  min-height: 73px;
+  margin-top: 8%;
+  font-weight: 500;
+  text-align: center;
+  font-style: italic;
+  white-space: normal;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+}
+.landing-testimonial-row-v2{
+  max-width: 100% !important;
+  width: 100% !important;
+  margin-top: 10% !important;
+  justify-content: center;
+}
+
+.landing-testimonial-picture-container-v2{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  bottom: -25%;
+}
+
+.testimonials-main-container{
+  width: 80% !important;
+  min-width: 87% !important;
+}
+
+.ellipsis {
+  white-space: nowrap !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+  width: 150px !important;
 }
